# DACN_HandRobot_STM32_Interface

Interface_Control/.venv-1/: pyvenv.cfg
Interface_Control/3D/: ARM1.CATPart  ARM1A.CATPart  ARM2.CATPart  ARM2A.CATPart  BASE.CATPart  BASE2.CATPart  BASE2A.CATPart  BASE2B.CATPart  GRIPPER1.CATPart  GRIPPER2.CATPart  Part1.CATPart  analyze_parts.py  axis2A.CATPart  axis2B.CATPart  axis3.CATPart  axis4.CATPart  axismotor2.CATPart  convert_to_stl.py  merge_stl_by_link.py  motoraxis1.CATPart  motoraxis2.CATPart  motoraxis3.CATPart  motoraxis5.CATPart  pasek1 .CATPart  pasek2 .CATPart  pasek3.CATPart  pasek4.CATPart  robot.CATProduct  robot_assembly.STEP  step_to_stl.py
Interface_Control/3D/STL_parts/: ARM1.STL  ARM1A.STL  ARM2.STL  ARM2A.STL  BASE.STL  BASE2.STL  BASE2A.STL  BASE2B.STL  GRIPPER1.STL  GRIPPER2.STL  Part1.STL  axis2A.STL  axis2B.STL  axis3.STL  axis4.STL  axismotor2.STL  motoraxis1.STL  motoraxis2.STL  motoraxis3.STL  motoraxis5.STL  pasek1.stl  pasek2.stl  pasek3.STL  pasek4.STL
Interface_Control/Document/: HUONG_DAN.md  Oder.md
Interface_Control/RVM1_Interface/: CMakeLists.txt
Interface_Control/RVM1_Interface/assets/models/: link0.stl  link3.stl
Interface_Control/RVM1_Interface/core/: Kinematics.cpp  Kinematics.h  SerialManager.cpp  SerialManager.h
Interface_Control/RVM1_Interface/ui/: RobotRenderer.cpp  RobotRenderer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Interface_Control/Setup_environment/: SETUP_GUIDE.md  deploy.ps1  setup_build.ps1
Interface_Control/assets/models/: link1.stl  link2.stl  link4.stl
